Version 3.4.3 (2011-??-??)
	Fixed bug where table size inputs were to small for values with size units.
	Fixed bug where table cell/row size input values were not validated.
	Fixed bug where menu item line-height would be set to wrong value by external styles.
	Fixed bug where hasUndo() would return wrong answer.
	Fixed bug where page title would be set to undefined by fullpage plugin.
Version 3.4.2 (2011-04-07)
	Added new 'paste_text_sticky_default' option to paste plugin, enables you to set the default state for paste as plain text.
	Added new autoresize_bottom_margin option to autoresize plugin that enables you to add an extra margin at the bottom. Patch contributed by Andrew Ozz.
	Rewritten the fullpage plugin to handle style contents better and have a more normalized behavior across browsers.
	Fixed bug where contents inserted with mceInsertContent wasn't parsed using the default dom parser.
	Fixed bug where blocks containing a single anchor element would be treated as empty.
	Fixed bug where merging of table cells on IE 6, 7 wouldn't look correctly until the contents was refreshed.
	Fixed bug where context menu wouldn't work properly on Safari since it was passing out the ctrl key as pressed.
	Fixed bug where image border color/style values were overwritten by advimage plugin.
	Fixed bug where setting border in advimage plugin would throw error in IE.
	Fixed bug where empty anchors list in link settings wasn't hidden.
	Fixed bug where xhtmlextras popups were missing localized popup-size parameters.
	Fixed bug where the context menu wouldn't select images on WebKit browsers.
	Fixed bug where paste plugin wouldn't properly extract the contents on WebKit due to recent changes in browser behavior.
	Fixed bug where focus of the editor would get on control contents on IE lost due to a bug in the ColorSplitButton control.
	Fixed bug where contextmenu wasn't disabled on noneditable elements.