@@ -20,17 +20,18 @@
 		return elm.value;
 	}
 
-	function setVal(id, value) {
+	function setVal(id, value, name) {
 		if (typeof(value) != 'undefined') {
 			var elm = get(id);
 
 			if (elm.nodeName == "SELECT")
 				selectByValue(document.forms[0], id, value);
 			else if (elm.type == "checkbox") {
-				if (typeof(value) == 'string')
-					elm.checked = value.toLowerCase() === 'true' ? true : false;
-				else
-					elm.checked = !!value;
+				if (typeof(value) == 'string') {
+					value = value.toLowerCase();
+					value = (!name && value === 'true') || (name && value === name.toLowerCase());
+				}
+				elm.checked = !!value;
 			} else
 				elm.value = value;
 		}
@@ -146,7 +147,7 @@
 
 						if (list) {
 							if (to_form) {
-								setVal(formItemName, list[name]);
+								setVal(formItemName, list[name], type == 'video' ? name : '');
 							} else {
 								delete list[name];
 
